_includes/css/width900-901/calendar900.css
.calendar-table {
  position: relative;
  min-width: 90vw;
}

.calendly-inline-widget {
  overflow-y: hidden !important;
}

@media(max-width:900px) {
  .calendly-inline-widget {
    position: relative;
    height: 100%;
    min-width: 320px;
  }

  .calendar-table {
    flex: 1;
    height: 940px;
    padding: 0;
  }

  .back-button-a {
    text-transform: uppercase;
    text-decoration: none;
    font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
    letter-spacing: 1px;
    color: white;
    padding: 0 10px;
    font-weight: bold;
  }
}


@media(min-width:901px) {
  .calendly-inline-widget {
    height: 767px;
  }

  .calendar-table {
    height: 764px;
    min-width: 45vw;
  }

  .back-button-header {
    display: none !important;
  }

  .close-button-calendar {
    position: fixed;
    top: -536px;
    bottom: 0;
    margin: auto;
    height: 49px;
    left: 0;
    right: -772px;
    width: 120px;
    cursor: pointer;
    color: white;
    font-size: 24px;
    text-transform: uppercase;
  }

  .close-button-calendar i {
    vertical-align: bottom;
    font-size: 40px;
  }
}

@media(min-width: 1300px) {
  .calendar-element {
    min-width: 26vw;
    max-width: 45vw;
  }
}


@media (min-width: 1400px) {
  .calendly-inline-widget {
    height: 970px;
  }
}

